--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "sone-template-cloudflare-worker",
-  "version": "1.0.1",
-  "main": "index.js",
+  "name": "@sone-dao/tone-service-auth-beta",
+  "version": "0.1.0",
+  "main": "src/index.ts",
   "repository": "https://github.com/sone-dao/sone-template-cloudflare-worker.git",
-  "author": "Lon Beshiri <lonbeshiri@gmail.com>",
   "license": "MIT",
   "scripts": {
     "test": "jest --verbose",
     "dev": "wrangler dev src/index.ts",
-    "deploy": "wrangler publish src/index.ts"
+    "deploy": "wrangler publish src/index.ts --minify"
   },
   "dependencies": {
-    "hono": "^3.2.0"
+    "hono": "^3.2.0",
+    "knex": "^2.4.2",
+    "postmark": "^3.0.18"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20221111.1",
