--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,14 @@
-name="tone-service-auth-beta"
+name="tone-service-auth"
 main="src/index.ts"
+route="auth.tone.audio"
 
 compatibility_date = "2022-11-22"
 node_compat = true
+
+[env.stage]
+route="stage.auth.tone.audio"
+vars = { ENVIRONMENT = "stage" }
+
+[env.beta]
+route="beta.auth.tone.audio"
+vars = { ENVIRONMENT = "beta" }
