--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "deploy:stage": "wrangler publish src/index.ts --minify --env stage"
   },
   "dependencies": {
+    "@types/uuid": "^9.0.2",
     "hono": "^3.2.0",
     "knex": "^2.4.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20221111.1",
