--- a/package.json
+++ b/package.json
@@ -7,23 +7,26 @@
   "scripts": {
     "test": "jest --verbose",
     "dev": "wrangler dev src/index.ts",
-    "deploy:prod": "wrangler publish src/index.ts --minify",
-    "deploy:stage": "wrangler publish src/index.ts --minify --env stage"
+    "deploy:prod": "wrangler deploy src/index.ts --minify",
+    "deploy:stage": "wrangler deploy src/index.ts --minify --env stage"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.26.0",
     "@types/uuid": "^9.0.2",
     "hono": "^3.2.0",
     "knex": "^2.4.2",
+    "pg": "^8.11.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20221111.1",
     "@types/jest": "^29.2.3",
     "@types/node": "^20.2.1",
+    "@types/pg": "^8.10.2",
     "esbuild": "^0.15.15",
     "esbuild-jest": "^0.5.0",
     "jest": "^29.3.1",
     "jest-environment-miniflare": "^2.11.0",
-    "wrangler": "^2.4.4"
+    "wrangler": "^3.1.1"
   }
 }
